# ir-train-detector

./: .gitmodules
board/: ir-train-detector.kicad_pcb  ir-train-detector.kicad_prl  ir-train-detector.kicad_pro  ir-train-detector.kicad_sch
firmware/: CMakeLists.txt  RAMMirroredFlashConfigurationStorage.h  RingBufferQueue.h  StatusLEDManager.h  StatusManager.cpp  StatusManager.h  UartHandler.cpp  UartHandler.h  _isr_timer1.asm  constants.cpp  constants.h  flags.h  info_memory_default_values.cpp  interrupts.cpp  interrupts.h  main.cpp  uart_cmd.md
